js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib1/JsModuleB.2.kt
@file:JsModule("../js-module-b-new.mjs")

external fun externalDemoFunction(): Int
